<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000">

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#00000c"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="20dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Save"
        android:id="@+id/saveButton"
        android:layout_gravity="left|bottom" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Discard"
        android:id="@+id/discardButton"
        android:layout_gravity="right|bottom" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Tweet"
        android:id="@+id/tweetButton"
        android:layout_gravity="center_horizontal|bottom" />
</FrameLayout>