<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:id="@+id/photoButton"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:id="@+id/videoButton"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:layout_above="@+id/saveButton"
        android:layout_below="@+id/photoButton"
        android:visibility="invisible"/>
    <VideoView
        android:id="@+id/previewVideo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:layout_above="@+id/saveButton"
        android:layout_alignTop="@+id/previewImage"
        android:visibility="invisible"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Save"
        android:id="@+id/saveButton"
        android:layout_gravity="left|bottom"
        android:layout_alignTop="@+id/discardButton"
        android:layout_alignEnd="@+id/videoButton"
        android:visibility="invisible"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Discard"
        android:id="@+id/discardButton"
        android:layout_gravity="right|bottom"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/photoButton" />
</RelativeLayout>